--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 #
 # TMUX RHATTOX CONFIGS FILE
 #
+# Use xclip for clipboard integration
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
 set-window-option -g mode-keys vi
 # change the default split window to \ as horizontal and - vertical
 bind '\' split-window -h
