--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ bind '-' split-window -v
 unbind '"'
 unbind %
 
+escape-time 10
+focus-events on
 # vim-like pane resizing  
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
